applications/overlays/cluster-example/managed-services/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-gateway-route
  namespace: keycloak
spec:
  parentRefs:
    - name: rmpk-gateway
      sectionName: keycloak-https
      namespace: rackspace-system
  hostnames:
    - "keycloak.rmpk.dev"
  rules:
    - backendRefs:
        - name: keycloak
          port: 443
